; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_git_config_string.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_git_config_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_string(i8** %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8** %0, i8*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %7, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %3
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @config_error_nonbool(i8* %11)
  store i32 %12, i32* %4, align 4
  br label %17

13:                                               ; preds = %3
  %14 = load i8*, i8** %7, align 8
  %15 = call i8* @xstrdup(i8* %14)
  %16 = load i8**, i8*** %5, align 8
  store i8* %15, i8** %16, align 8
  store i32 0, i32* %4, align 4
  br label %17

17:                                               ; preds = %13, %10
  %18 = load i32, i32* %4, align 4
  ret i32 %18
}

declare dso_local i32 @config_error_nonbool(i8*) #1

declare dso_local i8* @xstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
